# saas-dental-receptionist

./: .gitignore  CLAUDE.md  Procfile  README.md  hello.py  pyproject.toml  railway.toml  render.yaml  requirements.txt  vercel.json
concept/: concept.docx
frontend/: next.config.ts  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/components/admin/: AdminPage.tsx  DashboardHeader.tsx  LoginForm.tsx  TabNav.tsx
frontend/src/components/admin/appointments/: AppTable.tsx  AppointmentsTab.tsx  CancelModal.tsx  FilterBar.tsx  StatCard.tsx  StatsRow.tsx
frontend/src/components/admin/settings/: ChangePasswordSection.tsx  ClinicInfoSection.tsx  OpeningHoursSection.tsx  ServicesSection.tsx  SettingsTab.tsx
frontend/src/components/chat/: ChatFooter.tsx  ChatHeader.tsx  ChatPage.tsx  ChatWidget.tsx  MessageBubble.tsx  MessageList.tsx  ToolBar.tsx  TypingIndicator.tsx  VoiceBar.tsx
frontend/src/components/website/: ContactSection.tsx  HeroSection.tsx  ServicesSection.tsx  SiteFooter.tsx  SiteHeader.tsx  TestimonialsSection.tsx  WhyUsSection.tsx
frontend/src/hooks/: useAdminAuth.ts  useAppointments.ts  useSSEChat.ts  useSettings.ts  useVoice.ts
frontend/src/lib/: api.ts  constants.ts  formatters.ts
frontend/src/types/: index.ts
src/dental_receptionist/: __init__.py  agent.py  app.py  config.py  database.py  reminders.py  tools.py  whatsapp.py
static/: admin.css  admin.html  admin.js  app.js  index.html  style.css
