[project]
name = "saasdentalreceptionist"
version = "0.1.0"
description = "AI-powered dental receptionist using Claude API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "openai>=2.23.0",
    "python-multipart>=0.0.22",
    "twilio>=9.10.2",
    "passlib[bcrypt]>=1.7.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
